# plugin-mailersend

./: Cargo.toml  LICENSE  README.md  config.yaml
src/: lib.rs
